# best_3d_camera

./: .gitignore  CMakeLists.txt  README.md  README_hub_recon_grpc_shm.md  THIRD_PARTY_README.txt  TODO.txt  camera_3d_sdk_architecture.md  cmake-config-skill.txt  code-comments-skill.txt  实现待补与官方资料说明.txt
.cursor/rules/: use-project-skills.mdc
.cursor/skills/cmake-third-party-install/: SKILL.md
.cursor/skills/code-change-google-comments/: SKILL.md
.cursor/skills/feature-readme-context/: SKILL.md
.cursor/skills/framework-readme-sync/: SKILL.md
.cursor/skills/leak-and-thread-safety-check/: SKILL.md
cmake/: CameraSDKConfig.cmake.in  CopyResolvedRuntimeDlls.cmake  CopyThirdPartyRuntime.cmake  DaHengGalaxy.cmake  PlatformDiagConfig.cmake.in
config/: hub_service.template.json
libs/camera_driver/: CMakeLists.txt  README.md
libs/camera_driver/include/camera_driver/: adapters.h  camera_capture_result.h  camera_manager.h  camera_types.h  daheng_galaxy_capture_result.h  device_info_io.h  icamera_adapter.h
libs/camera_driver/src/: camera_manager.cpp  daheng_camera_adapter_stub.cpp  daheng_camera_galaxy.cpp  daheng_camera_select.cpp  device_info_io.cpp  null_camera_adapter.cpp
libs/camera_hub_api/: CMakeLists.txt
libs/camera_hub_api/include/camera3d/hub/: device_discovery_beacon.h  hub_service_state_codes.h
libs/camera_proto/: CMakeLists.txt
libs/camera_proto_stub/: CMakeLists.txt
libs/camera_proto_stub/include/camera_proto_stub/: stub_mark.h
libs/capture_orchestrator/: CMakeLists.txt
libs/capture_orchestrator/include/capture_orchestrator/: hard_trigger_orchestrator.h  multi_hard_trigger_orchestrator.h
libs/capture_orchestrator/src/: hard_trigger_orchestrator.cpp  multi_hard_trigger_orchestrator.cpp
libs/ipc_shmem/: CMakeLists.txt
libs/ipc_shmem/include/ipc_shmem/: shm_constants.h  shm_ring_buffer.h
libs/ipc_shmem/src/: shm_ring_buffer.cpp
libs/pipeline_api/: CMakeLists.txt
libs/pipeline_api/include/pipeline_api/: detection_pipeline.h  reconstruction_pipeline.h  shm_frame_view.h
libs/pipeline_api/src/: pipeline_impl.cpp
libs/platform_diag/: CMakeLists.txt  EXAMPLE_CMAKE_SPDLOG.md  LOG_MODULE_FILE_LIST.txt  README_CRASH_HANDLER.md  README_LOG_MODULE.md
libs/platform_diag/examples/minimal_app/: CMakeLists.txt  README.txt  main.cpp
libs/platform_diag/include/platform_diag/: build_info.h  crash_handler.h  diag_config.h  logging.h
libs/platform_diag/src/: crash_handler.cpp  diag_config.cpp  logging.cpp
libs/serial_port/: CMakeLists.txt
libs/serial_port/include/serial_port/: iserial_port.h  projector_command.h  serial_port_manager.h  serial_projector.h
libs/serial_port/src/: projector_command.cpp  serial_port.cpp  serial_port_manager.cpp  serial_projector.cpp
libs/shm_loopback_test/: CMakeLists.txt
libs/shm_loopback_test/include/shm_loopback_test/: save_utils.h
libs/shm_loopback_test/src/: save_utils.cpp
proto/: camera_hub.proto  camera_recon_test.proto
scripts/: Windows服务注册说明.txt  install-windows-services.ps1
sdk/camera_sdk/: CMakeLists.txt
sdk/camera_sdk/include/camera_sdk/: best_camera_3d.h  best_device_info.h  best_event.h  best_types.h  developer_camera_sdk.h  export.h  hub_client_action.h  user_camera_sdk.h
sdk/camera_sdk/src/: best_camera_3d.cpp  camera_sdk_discovery.cpp  camera_sdk_discovery.h  camera_sdk_grpc.cpp  camera_sdk_stub.cpp  developer_camera_sdk.cpp  user_camera_sdk.cpp
services/hub_service/: CMakeLists.txt  hub_app.h  hub_app_grpc.cpp  hub_app_stub.cpp  hub_burst_tiff_save.cpp  hub_burst_tiff_save.h  hub_device_broadcaster.cpp  hub_device_broadcaster.h  hub_file_config.cpp  hub_file_config.h  hub_service_state.cpp  hub_service_state.h  hub_shm_loopback_test.cpp  hub_shm_loopback_test.h  main.cpp
services/hub_service/config/: hub_service.example.json  hub_service.json  hub_service.template.json
services/recon_service/: CMakeLists.txt  main.cpp  recon_hub_burst_receiver.cpp  recon_hub_burst_receiver.h  recon_shm_loopback_grpc.cpp  recon_shm_loopback_grpc.h
skills/chinese-code-comments/: SKILL.md
skills/hub-recon-grpc-shm/: SKILL.md
test_image/: LaserImage_20260327163204.tiff  board.tiff
tools/camera_viewer/: CMakeLists.txt
tools/camera_viewer/scanner_viewer_src/: .gitignore  CMakeLists.txt  README.md  main.cpp
tools/camera_viewer/scanner_viewer_src/app/: MainWindow.cpp  MainWindow.h
tools/camera_viewer/scanner_viewer_src/cmake/: CopyAirSdkDlls.cmake  CopyElaWidgetToolsDlls.cmake  CopyHikMv3dDlls.cmake  CopyVtkDlls.cmake  RunWindeployqt.cmake
tools/camera_viewer/scanner_viewer_src/common/: camera_viewer_btest.h  unified_image_qt.cpp  unified_image_qt.h
tools/camera_viewer/scanner_viewer_src/common/log/: Logger.cpp  Logger.h
tools/camera_viewer/scanner_viewer_src/controller/: AcquisitionController.cpp  AcquisitionController.h  DeviceController.cpp  DeviceController.h
tools/camera_viewer/scanner_viewer_src/model/data_center/: DataCenter.cpp  DataCenter.h  UnifiedFrame.h
tools/camera_viewer/scanner_viewer_src/model/device_layer/: ASeriesAdapter.cpp  ASeriesAdapter.h  BestCamera3DAdapter.cpp  BestCamera3DAdapter.h  DeviceInfo.h  DeviceModelTags.h  HikvisionAdapter.cpp  HikvisionAdapter.h  IDeviceAdapter.h
tools/camera_viewer/scanner_viewer_src/view/param_ui/: CameraParamPanel.cpp  CameraParamPanel.h
tools/camera_viewer/scanner_viewer_src/view/raw_album/: RawImageAlbumPage.cpp  RawImageAlbumPage.h
tools/camera_viewer/scanner_viewer_src/view/viewer_core/: ImageView2D.cpp  ImageView2D.h  PointCloudView3D.cpp  PointCloudView3D.h  RangeSlider.h
tools/hub_connectivity_test/: CMakeLists.txt  main.cpp
tools/smoke_test/: CMakeLists.txt  main.cpp
