set(RECON_SOURCES main.cpp)
if(NOT CAMERA3D_USE_GRPC_STUB)
  list(APPEND RECON_SOURCES recon_hub_burst_receiver.cpp)
endif()
if(CAMERA3D_ENABLE_RECON_SHM_LOOPBACK_TEST AND NOT CAMERA3D_USE_GRPC_STUB)
  list(APPEND RECON_SOURCES recon_shm_loopback_grpc.cpp)
endif()

add_executable(recon_service ${RECON_SOURCES})
target_link_libraries(recon_service PRIVATE platform_diag ipc_shmem pipeline_api)
if(NOT CAMERA3D_USE_GRPC_STUB)
  target_link_libraries(recon_service PRIVATE camera_proto gRPC::grpc++)
  target_compile_definitions(recon_service PRIVATE CAMERA3D_ENABLE_RECON_HUB_BURST_WATCHER=1)
endif()
if(CAMERA3D_ENABLE_RECON_SHM_LOOPBACK_TEST AND NOT CAMERA3D_USE_GRPC_STUB)
  target_link_libraries(recon_service PRIVATE shm_loopback_test)
  target_compile_definitions(recon_service PRIVATE CAMERA3D_ENABLE_RECON_SHM_LOOPBACK_TEST=1)
endif()
if(WIN32)
  target_link_libraries(recon_service PRIVATE ws2_32)
endif()
camera3d_register_post_build_copy_dlls(recon_service)
install(TARGETS recon_service RUNTIME DESTINATION ${CAMERA_3D_INSTALL_BINDIR})
